--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "framer-motion": "^10.12.20",
-    "next": "13.4.9",
+    "next": "^13.4.11",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "three": "^0.154.0",
+    "typescript": "^5.1.6"
   }
 }
