--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/ibm-plex-mono": "^5.0.8",
     "@react-three/drei": "^9.80.1",
     "@react-three/fiber": "^8.13.6",
     "@types/node": "20.4.2",
