--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/ibm-plex-mono": "^5.0.8",
     "@react-three/drei": "^9.80.1",
     "@react-three/fiber": "^8.13.6",
+    "@supabase/supabase-js": "^2.43.4",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -20,8 +21,8 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "framer-motion": "^10.12.20",
-    "next": "^13.4.11",
-    "postcss": "8.4.26",
+    "next": "^14.2.3",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
