--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@types/three": "^0.159.0",
+    "autoprefixer": "^10.4.20",
+    "framer-motion": "^10.16.12",
     "next": "^14.0.3",
+    "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.159.0",
-    "typescript": "^5.3.2",
-    "framer-motion": "^10.16.12"
+    "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.15"
   }
 }
